specs/blueprints/errors/validation/comment_error.eno
# Triggering an error inside a custom loader when querying a required comment on a field

-- input
> comment
field: value
-- input

-- javascript
parse(input).field('field').requiredComment(() => { throw 'my error'; });
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->requiredComment(function() { throw new Exception('my error'); });
-- php

-- python
def loader(value):
  raise ValueError('my error')

enolib.parse(input).field('field').required_comment(loader)
-- python

-- ruby
Enolib.parse(input).field('field').required_comment { raise 'my error' }
-- ruby

## ValidationError

-- text
There is a problem with the comment of this element: my error
-- text

-- snippet
   Line | Content
 >    1 | > comment
 *    2 | field: value
-- snippet

selection: [0,2] => [0,9]
